{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 209,
  "lineage": "eb6c996d-e4ed-c106-ea8d-9712e02a43ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:loadbalancer/app/app-load-balancer/a2c912ac147bef02",
            "arn_suffix": "app/app-load-balancer/a2c912ac147bef02",
            "dns_name": "internal-app-load-balancer-1629312114.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:398230616010:loadbalancer/app/app-load-balancer/a2c912ac147bef02",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer",
            "security_groups": [
              "sg-0608bd581ca341c88"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02cb55d557bdb9a71"
              },
              {
                "subnet_id": "subnet-0b9d95433638a246c"
              }
            ],
            "subnets": [
              "subnet-02cb55d557bdb9a71",
              "subnet-0b9d95433638a246c"
            ],
            "vpc_id": "vpc-02125e16f99b0cb72",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.app_elb_sg",
            "aws_subnet.us-west-2a-private-app",
            "aws_subnet.us-west-2b-private-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "web_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:loadbalancer/app/web-load-balancer/17590deae079f9c4",
            "arn_suffix": "app/web-load-balancer/17590deae079f9c4",
            "dns_name": "web-load-balancer-1270231186.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:398230616010:loadbalancer/app/web-load-balancer/17590deae079f9c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-load-balancer",
            "security_groups": [
              "sg-04f6b6120eec547e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a5fdf2d8cebafd83"
              },
              {
                "subnet_id": "subnet-0b60a74077dc3dfc4"
              }
            ],
            "subnets": [
              "subnet-0a5fdf2d8cebafd83",
              "subnet-0b60a74077dc3dfc4"
            ],
            "vpc_id": "vpc-02125e16f99b0cb72",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.web_elb_sg",
            "aws_subnet.us-west-2a-public",
            "aws_subnet.us-west-2b-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app_alb_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:listener/app/app-load-balancer/a2c912ac147bef02/29869c687ce240cf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:targetgroup/app-target-group-gaia/3d1d695028c8ec0c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:398230616010:listener/app/app-load-balancer/a2c912ac147bef02/29869c687ce240cf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:loadbalancer/app/app-load-balancer/a2c912ac147bef02",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.app_lb",
            "aws_alb_target_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_alb_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:listener/app/web-load-balancer/17590deae079f9c4/2e791a6405a32929",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:targetgroup/web-target-group-gaia/7ead1565925f3f63",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:398230616010:listener/app/web-load-balancer/17590deae079f9c4/2e791a6405a32929",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:loadbalancer/app/web-load-balancer/17590deae079f9c4",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.web_lb",
            "aws_alb_target_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:targetgroup/app-target-group-gaia/3d1d695028c8ec0c",
            "arn_suffix": "targetgroup/app-target-group-gaia/3d1d695028c8ec0c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:398230616010:targetgroup/app-target-group-gaia/3d1d695028c8ec0c",
            "lambda_multi_value_headers_enabled": false,
            "name": "app-target-group-gaia",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final",
            "random_string.alb_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:398230616010:targetgroup/web-target-group-gaia/7ead1565925f3f63",
            "arn_suffix": "targetgroup/web-target-group-gaia/7ead1565925f3f63",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:398230616010:targetgroup/web-target-group-gaia/7ead1565925f3f63",
            "lambda_multi_value_headers_enabled": false,
            "name": "web-target-group-gaia",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final",
            "random_string.alb_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-005cfbd18b2c48efc",
            "domain": "vpc",
            "id": "eipalloc-00c9d900daee69cd8",
            "network_interface": "eni-0ea835f2b8d25b1c9",
            "private_dns": "ip-172-20-11-19.us-west-2.compute.internal",
            "private_ip": "172.20.11.19",
            "public_dns": "ec2-44-226-57-113.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.57.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08defc4adc0f0af37",
            "owner_id": "398230616010",
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "class-final-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c9d900daee69cd8",
            "id": "nat-03f40dab8357b96fd",
            "network_interface_id": "eni-0ea835f2b8d25b1c9",
            "private_ip": "172.20.11.19",
            "public_ip": "44.226.57.113",
            "subnet_id": "subnet-0a5fdf2d8cebafd83"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.us-west-2a-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2a-private-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d3b9aac48b005b85",
            "owner_id": "398230616010",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03f40dab8357b96fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-private-1"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_nat_gateway.class-final-nat-gw",
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2a-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00d825b823a87cc33",
            "owner_id": "398230616010",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03f40dab8357b96fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-private-1"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_nat_gateway.class-final-nat-gw",
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2a-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07fa1dc9a6b0e2dee",
            "owner_id": "398230616010",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03f40dab8357b96fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-private-1"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_nat_gateway.class-final-nat-gw",
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b12404279edccad",
            "owner_id": "398230616010",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08defc4adc0f0af37",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2a-private-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081160a4f0719adb6",
            "route_table_id": "rtb-0d3b9aac48b005b85",
            "subnet_id": "subnet-0b9d95433638a246c"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-private-app",
            "aws_subnet.us-west-2a-private-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2a-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f282c35a72563dfc",
            "route_table_id": "rtb-00d825b823a87cc33",
            "subnet_id": "subnet-036e22c3b56b33be8"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-private-db",
            "aws_subnet.us-west-2a-private-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2a-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d930262d820269f5",
            "route_table_id": "rtb-07fa1dc9a6b0e2dee",
            "subnet_id": "subnet-0e1ced5ec4ac7f100"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-private-web",
            "aws_subnet.us-west-2a-private-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b819f3e44ef232",
            "route_table_id": "rtb-02b12404279edccad",
            "subnet_id": "subnet-0a5fdf2d8cebafd83"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-public",
            "aws_subnet.us-west-2a-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2b-private-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4590d9b790ba87",
            "route_table_id": "rtb-0d3b9aac48b005b85",
            "subnet_id": "subnet-02cb55d557bdb9a71"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-private-app",
            "aws_subnet.us-west-2b-private-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2b-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a9ac773c95b237",
            "route_table_id": "rtb-00d825b823a87cc33",
            "subnet_id": "subnet-04c687aebd0b663bc"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-private-db",
            "aws_subnet.us-west-2b-private-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2b-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036f2695c849602b6",
            "route_table_id": "rtb-07fa1dc9a6b0e2dee",
            "subnet_id": "subnet-09855fdb0308482c2"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-private-web",
            "aws_subnet.us-west-2b-private-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2b-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f1a7327ecfd9c3",
            "route_table_id": "rtb-02b12404279edccad",
            "subnet_id": "subnet-0b60a74077dc3dfc4"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-public",
            "aws_subnet.us-west-2b-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:security-group/sg-0608bd581ca341c88",
            "description": "Allow communications from app elb to the web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "172.20.3.0/24",
                  "172.20.4.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-0608bd581ca341c88",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.1.0/24",
                  "172.20.2.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "app_elb_sg",
            "name_prefix": null,
            "owner_id": "398230616010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app tier elb sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_layer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:security-group/sg-0694c5ec15d8d1024",
            "description": "Allow communication between the app layer and the database layer",
            "egress": [
              {
                "cidr_blocks": [
                  "172.20.5.0/24",
                  "172.20.5.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0694c5ec15d8d1024",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.3.0/24",
                  "172.20.4.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "app_layer_sg",
            "name_prefix": null,
            "owner_id": "398230616010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_layer_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_layer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:security-group/sg-07aa0666158eb08cc",
            "description": "Allow communication between the app layer and the database layer",
            "egress": [
              {
                "cidr_blocks": [
                  "172.20.3.0/24",
                  "172.20.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-07aa0666158eb08cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.3.0/24",
                  "172.20.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_layer_sg",
            "name_prefix": null,
            "owner_id": "398230616010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_layer_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:security-group/sg-0a2dc8db2134740aa",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "172.20.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0a2dc8db2134740aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.20.1.0/24",
                  "172.20.2.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "398230616010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:security-group/sg-04f6b6120eec547e7",
            "description": "Allow communications from web elb to the web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "172.20.1.0/24",
                  "172.20.2.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-04f6b6120eec547e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "web_elb_sg",
            "name_prefix": null,
            "owner_id": "398230616010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web tier elb sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_layer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:security-group/sg-022bca22f15d9bc49",
            "description": "Allow communication between the web layer and the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "172.20.3.0/24",
                  "172.20.4.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-022bca22f15d9bc49",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.11.0/24",
                  "172.20.12.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "web_layer_sg",
            "name_prefix": null,
            "owner_id": "398230616010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_layer_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2a-private-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-0b9d95433638a246c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.20.3.0/24",
            "id": "subnet-0b9d95433638a246c",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Private Subnet for app in AZ a"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2a-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-036e22c3b56b33be8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.20.5.0/24",
            "id": "subnet-036e22c3b56b33be8",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Private Subnet for DB in AZ a"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2a-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-0e1ced5ec4ac7f100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.20.1.0/24",
            "id": "subnet-0e1ced5ec4ac7f100",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Private Subnet for web in AZ a"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-0a5fdf2d8cebafd83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.20.11.0/24",
            "id": "subnet-0a5fdf2d8cebafd83",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2b-private-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-02cb55d557bdb9a71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.4.0/24",
            "id": "subnet-02cb55d557bdb9a71",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Private Subnet for app in AZ b"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2b-private-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-04c687aebd0b663bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.6.0/24",
            "id": "subnet-04c687aebd0b663bc",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Private Subnet for DB in AZ b"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2b-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-09855fdb0308482c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.2.0/24",
            "id": "subnet-09855fdb0308482c2",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Private Subnet for web in AZ b"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2b-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:subnet/subnet-0b60a74077dc3dfc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.12.0/24",
            "id": "subnet-0b60a74077dc3dfc4",
            "map_public_ip_on_launch": false,
            "owner_id": "398230616010",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc-for-final",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:398230616010:vpc/vpc-02125e16f99b0cb72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-00ec38191db3d6048",
            "default_route_table_id": "rtb-0187bfaa7c5ea908a",
            "default_security_group_id": "sg-042a2450695c9bcfe",
            "dhcp_options_id": "dopt-bd2fedd9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02125e16f99b0cb72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0187bfaa7c5ea908a",
            "owner_id": "398230616010",
            "tags": {
              "Name": "terraform-aws-final-project"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3endpoint",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.160.0/19",
              "52.218.128.0/17",
              "52.92.32.0/22"
            ],
            "id": "vpce-0fd78bda6e852b2d1",
            "owner_id": "398230616010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02b12404279edccad"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-02125e16f99b0cb72"
          },
          "depends_on": [
            "aws_route_table.us-west-2a-public",
            "aws_vpc.test-vpc-for-final"
          ]
        }
      ]
    }
  ]
}